[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jelmar"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^8.1"
pluto = {git = "https://github.com/pluto-py/engine"}
tinyrpc = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
