[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jelmar"]

[tool.poetry.scripts]
dev = "server.core:main"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^8.1"
pluto = {path = "../pluto.py-engine"}
tinyrpc = "^1.0.4"
watchgod = "^0.6"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
